details.html, js 수정
수량 직접 입력 가능

--- a/details.html
+++ b/details.html
@@ -14,10 +14,10 @@
             <img src="img/blank.png" alt="상품 이미지" id="product-img">
             <figcaption>
                 <div class="product-info"></div>
-                <form action="" method="post">
+                <div>
                     <div class="quantity-controls">
                         <button type="button" class="adjust" id="dec">-</button>
-                        <input name="quantity" id="quantity" value="0" readonly>
+                        <input name="quantity" id="quantity" value="0">
                         <button type="button" class="adjust" id="inc">+</button>
                     </div>
                     <div class="text-lg total-price-section">
@@ -30,10 +30,10 @@
                         </p>
                     </div>
                     <div class="buttons">
-                        <button type="submit" class="buy green">바로 구매</button>
+                        <button type="button" class="buy green">바로 구매</button>
                         <button type="button" class="addToCart green">장바구니</button>
                     </div>
-                </form>
+                </div>
             </figcaption>
         </figure>
         <section class="tabs-wrapper">
