장바구니 모달창 위치 조정
좌측 상단 -> 중앙 상단

--- a/modal.html
+++ b/modal.html
@@ -2,8 +2,8 @@
     <div class="modal-content">
         <p class="text-md">로그인이 필요한 서비스입니다.<br>
             로그인 하시겠습니까?</p>
-        <button id="modal-no" class="white small">아니오</button>
-        <button id="modal-yes" class="green small">네</button>
+        <button class="white small modal-no">아니오</button>
+        <button class="green small modal-yes">네</button>
         <button class="modal-close"><img src="img/close.svg" alt=""></button>
     </div>
 </div>
