--- a/cart.html
+++ b/cart.html
@@ -29,7 +29,7 @@
             <button type="button" class="green order">주문하기</button>
         </section>
     </main>
-    <div class="main-modal" style="display: none;"></div>
+    <dialog class="main-modal"></dialog>
     <footer></footer>
     <script src="js/cart.js"></script>
 </body>
