--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="product-list"></section>
         <nav class="pagination"></nav>
     </main>
-    <div class="main-modal" style="display: none;"></div>
+    <dialog class="main-modal"></dialog>
     <footer></footer>
 </body>
 <script src="js/index.js"></script>
