--- a/modal.html
+++ b/modal.html
@@ -1,15 +1,15 @@
-<div id="main-modal" class="main-modal" style="display: none;">
+<dialog class="main-modal">
     <div class="modal-content">
         <p class="text-md">로그인이 필요한 서비스입니다.<br>
             로그인 하시겠습니까?</p>
-        <button class="white small modal-no">아니오</button>
-        <button class="green small modal-yes">네</button>
+        <button id="modal-no" class="white small">아니오</button>
+        <button id="modal-yes" class="green small">네</button>
         <button class="modal-close"><img src="img/close.svg" alt=""></button>
     </div>
-</div>
+</dialog>
 <!-- 업데이트 예정
 <div id="modals" class="modals">
-    <div id="main-modal" class="main-modal" style="display: none;">
+    <dialog id="main-modal" class="main-modal">
         <div class="modal-content">
             <p class="text-md">로그인이 필요한 서비스입니다.<br>
                 로그인 하시겠습니까?</p>
@@ -17,20 +17,20 @@
             <button id="modal-yes" class="green small">네</button>
             <button class="modal-close"><img src="img/close.svg" alt=""></button>
         </div>
-    </div>
-    <div id="remove-modal" class="main-modal" style="display: none;">
+    </dialog>
+    <dialog id="remove-modal" class="main-modal">
         <div class="modal-content">
             <p class="text-md">상품을 삭제 하시겠습니까?</p>
             <button id="modal-no" class="white small">취소</button>
             <button id="modal-yes" class="green small">확인</button>
             <button class="modal-close"><img src="img/close.svg" alt=""></button>
         </div>
-    </div>
-    <div id="mypage-modal" class="mypage-modal" style="display: none;">
+    </dialog>
+    <dialog id="mypage-modal" class="mypage-modal">
         <div class="modal-content">
             <a href="">마이페이지</a>
             <a href="login.html">로그아웃</a>
         </div>
-    </div>
+    </dialog>
 </div>
 -->
