--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
         const errorMessage = document.getElementById('error-message');
 
         try {
-            const response = await fetch('https://openmarket.weniv.co.kr/accounts/login/', {
+            const response = await fetch('https://estapi.openmarket.weniv.co.kr/accounts/login/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
